@@ -1,4 +1,7 @@
-17.oct (oct)
+19.oct (la)
+      - fix #13183: [MusicXML] Wrong import of right barline
+      - add dynamic and note velocity support in MusicXML export/import
+17.oct (lv)
       - fix #13107: bww import: missing bagpipe doublings
 9.oct (lv)
       - fix #12382: [MusicXML] Key Signature for 2 Staves
